<resources>
    <string name="app_name">True Or False</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="lblTrue">True</string>
    <string name="lblFalse">False</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="title_activity_single_player">SinglePlayerActivity</string>
    <string name="title_activity_single_player_result">SinglePlayerResultActivity</string>
    <string name="lblNext">Next</string>
    <string name="lblSkip">Skip</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="lblLevel">Level</string>
    <string name="about_text"><Data><![CDATA[ExpertGames is a leading business software solutions provider that helps mid sized organizations, established corporations & entrepreneurial ventures harness the power of the IT to improve operations and increase revenues.\n\nExpertGames encompasses a huge repository of IT skills that includes but is not limited to the customized development of robust digital signage solutions, web enabled business managementsystems, IT outsourcing services, knowledge management solutions,application services management,e-Business applications & intranet based solutions.\n\nRight from the inception to the conclusion of a project, ExpertGames is your friend, your partner, Your confidante who will work at an unbelievable pace and unmatched dedication to convert your ideas, dreams & requirements to reality. Because of the high degree of emphasis that we place on customer relationship, people and organizations that have chosen ExpertGames as their solutions provider have experienced a satisfaction level like none other. We actually put ourselves in your shoes, view the project from your perspective, understand your targets and goals, and then utilize our expertise in developing a solution that is sustainable, scalable and cost effective.\n\nDeveloper:  ExpertGames \nGraphics:  ExpertGames \nSupport and evangelizing:  ExpertGames\nEnhancements:  ExpertGames\n\nWeb-Site:  www.indomobilegames.com]]> </Data></string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="lblAboutUs">About Us</string>
    <string name="lblSettings">Settings</string>
    <string name="admob_id">a1530f12d9b64ed</string>
    <string name="facebook_id">292082227614348</string>
    <string name="msg_post_success">Successfully posted on Facebook</string>
    <string name="more_apps">market://search?q=pub:ExpertGames</string>
    <string name="review_url">market://details?id=com.egames.game.tnf</string>
    <string name="browser_app_url">https://play.google.com/store/apps/details?id=com.egames.game.tnf</string>
    <string name="admob_banner">ca-app-pub-3759214049372191/6004099224</string>
    <string name="admob_interstitial">ca-app-pub-3759214049372191/6004099224</string>
    <string name="tablet_string">false</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fcm_message">FCM Message</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="completed">Congratulations!! \n You have completed the level.</string>
    <string name="not_completed">Oops!! \n Level not completed.Play again!</string>
    <string name="select_level">Select Level</string>
    <string name="select_category">Select Category</string>
    <string name="noti_list">Notification List</string>
    <string name="sound">Sound</string>
    <string name="apply_code">Apply Referral Code</string>
    <string name="apply">Apply</string>
    <string name="share_app">Share App</string>
    <string name="vibration">Vibration</string>
    <string name="rateapp">Rate Us</string>
    <string name="bg_music">Background Music</string>
    <string name="share_via">Share via</string>
    <string name="next_play">Play Next Level</string>
    <string name="play_again">Play Again</string>
    <string name="quite">Home</string>
    <string name="review_answer">Review Answers</string>
    <string name="share_score">Share Your Score</string>
    <string name="play_next">Play Again</string>
    <string name="lets_play">Let\'s Play</string>
    <string name="instruction">Instruction</string>
    <string name="msg_no_internet">No internet connection!!</string>
    <string name="no_category">category not available!!</string>
    <string name="no_data">data not found!!</string>
    <string name="no_sub_category">sub category not available!!</string>
    <string name="no_enough_question">Not enough questions, to play level.</string>
    <string name="retry">RETRY</string>
    <string name="title">Title</string>
    <string name="hello">Hello,&#160;</string>
    <string name="bm_empty_msg">bookmark not available</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="un_attend">Un-Attempted</string>
    <string name="answer">answer</string>
    <string name="extra_note">Extra Note</string>
    <string name="note">Note</string>
    <string name="ok">OK</string>
    <string name="report">Report Question</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="title_already_used">Life Line Already Used !!</string>
    <string name="msg_lifeline_used">You can use only once per level</string>
    <string name="true_ans">True Ans: </string>
    <string name="bookmark_play1">Bookmark Play</string>
    <string name="zero">0</string>
    <string name="loading">Loading…</string>
    <string name="bookmark_list">Bookmark List</string>
    <string name="level_not_available">Level not available</string>
    <string name="go_back">Go Back</string>
    <string name="login_with">Login / SignUp With</string>
    <string name="login">Login</string>
    <string name="login_not">Hello, User</string>
    <string name="signup">SignUp</string>
    <string name="signup_alert">you are not registered yet, please SignUp</string>
    <string name="invalid_pass">The password is invalid, please check your password</string>
    <string name="email_alert_1">Please enter email address</string>
    <string name="email_alert_2">Please enter valid email address</string>
    <string name="pass_alert">Please enter password</string>
    <string name="verify_email_sent">Verification email sent to &#160;</string>
    <string name="verify_email_sent_f">Failed to send verification email.</string>
    <string name="ref_code">Referral code</string>
    <string name="act_verify_1">A Verified link has been sent to your email account</string>
    <string name="act_verify_2">Please click on the link that has just been sent to your email account to verify your email and continue the login process.</string>
    <string name="account_deactivate">Your Account is deactivate by admin</string>
    <string name="select_language">Select Language</string>
    <string name="refer_share_msg_1">I have earned coins using&#160;</string>
    <string name="refer_share_msg_2">&#160;app. you can also earn coin by downloading app from below link and enter referral code while login-&#160; </string>
    <string name="msg_enough_coin">Not Enough Coins !!</string>
    <string name="coin_message">You don\'t have enough coins. You need at least 4 coins to use this lifeline. \n\nWatch a short video &amp; get free coins</string>
    <string name="skip">Skip</string>
    <string name="msg_watch_video">Watch Now</string>
    <string name="total_score">Total Score</string>
    <string name="total_coins">Total Coins</string>
    <string name="attended">Attended Ques</string>
    <string name="correct_ans">Correct Ans</string>
    <string name="incorrect_ans">InCorrect Ans</string>
    <string name="report_hint">Type a message</string>
    <string name="about_us">About Us</string>
    <string name="exit_msg">Do you want to exit the level?</string>
    <string name="bookmark_play">Play Bookmark</string>
    <string name="all_complete_msg">You have Completed All Questions !!</string>
    <string name="battle_msg1">\u25CF This will allow player vs player battle</string>
    <string name="battle_msg2">\u25CF If not found any player to a battle, you can battle with the robot</string>
    <string name="battle_msg3">\u25CF For battle, same questions will be served for both the player
        &amp; the winner will be declared base on no of right answers</string>
    <string name="has_option">Quiz game has 4 options</string>
    <string name="msg_right">For each right answer 5 points will be given.</string>
    <string name="msg_wrong">minus 2 points for each question</string>
    <string name="msg_lifeline">Use of Lifeline  : You can use only once per level</string>
    <string name="msg_fifty_fifty">50 – 50 : for remove two option out of Four(deduct 4 coins ).</string>
    <string name="msg_skip">Skip question: you can pass question without minus points(deduct 2 coins).</string>
    <string name="msg_opinion">Audience poll: use audience paul for check other users choose option(deduct 4 coins).</string>
    <string name="msg_reset">Reset timer: Reset timer again if you needed more time score (deduct 2 coins).</string>
    <string name="msg_leaderboard">You can compare your score with other users of apps</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="textsize_dialog_lbl_fontsize">Font Size</string>
    <string name="font_size">Font Size</string>
    <string name="level_locked">Level is Locked</string>
    <string name="logout_warning">Do you really want to log out?</string>
    <string name="update_profile">Update Profile</string>
    <string name="user_statistics">User Statistics</string>
    <string name="strong_cate">Strong Category</string>
    <string name="weak_cate">Weak Category</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="back">BACK</string>
    <string name="play_quiz">Play Quiz</string>
    <string name="battle_quiz">Battle Quiz</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="notification">Notification</string>
    <string name="show_answer">Show Answer</string>
    <string name="take_photo">Take Photo</string>
    <string name="from_library">Choose from Library</string>
    <string name="signup_with">SignUp With Email</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_valid">Password should be at least 6 characters</string>
    <string name="refer">Referral Code (optional)</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="reset_pass">Enter the email address you used when creating the account. A message will be sent to that address containing a link to reset your password.</string>
    <string name="logout">Logout</string>
    <string name="rank">Rank</string>
    <string name="score">Score</string>
    <string name="coins">Coins</string>
    <string name="statistics">Statistics</string>
    <string name="term_privacy">By Logging / SigningUp in, you agree to our Terms of Service and Privacy Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms">Terms of Service</string>
    <string name="modulo_sign">%</string>
    <string name="matching_opponent">Matching Opponent</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="exit">EXIT</string>
    <string name="play_with_computer1">Play With Robot </string>
    <string name="congrats">Congratulation</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>